Fixed the backend prose presentation to be aligned with the frontend

--- a/_assets/public/css/frontend/style.css
+++ b/_assets/public/css/frontend/style.css
@@ -2353,9 +2353,6 @@ a {
 .prose h3 {
   font-size: 1.3em;
 }
-.prose p{
-  line-height: 2rem;
-}
 .prose a {
   color: #7898FF;
 }
