--- a/_assets/src/css/frontend/modules/_prose.css
+++ b/_assets/src/css/frontend/modules/_prose.css
@@ -14,10 +14,6 @@
   font-size: 1.3em;
 }
 
-.prose p {
-  @apply leading-8;
-}
-
 .prose a {
   color: #7898FF;
 }
